deployment/k8s_development_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-fed-lora-server
  namespace: dp-fed-lora-development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dp-fed-lora-server
  template:
    metadata:
      labels:
        app: dp-fed-lora-server
    spec:
      containers:
      - name: dp-fed-lora-server
        image: dp-federated-lora:latest
        ports:
        - containerPort: 8443
        resources:
          requests:
            memory: "4Gi"
            cpu: "2"
